# piper

./: meson.build
src/cpp/: meson.build
subprojects/: .gitignore  piper-phonemize.wrap
subprojects/packagefiles/libpiper_phonemize/: meson.build
subprojects/packagefiles/piper-phonemize/src/: phonemize.cpp
